src/test/compile-fail/fail-type-err.rs
// error-pattern:expected str but found [int]
fn main() { fail [0]; }
